--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "backend-chai-or-code",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mongoose": "^8.3.4",
     "nodemon": "^3.0.2"
   }
 }
